feat(login): add login page
- create login component
- create alert componet for displaying messages
- consume login api endpoint
-write unit and integration tests

[Delivers #164035586]

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -979,3 +979,12 @@ section.tab-pane {
     color: #77838f;
     background-color: transparent;
 }
+
+.alert.alert-success{
+    background-color: #009f8b;
+}
+
+.alert li:only-child{
+    list-style-type: none;
+    margin-left: 0px;
+}
