--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,8 @@
 @import './shared.scss';
 @import './home.scss';
+@import './form.scss';
+@import './login.scss';
+@import './admin.scss';
+@import './dialog.scss';
+@import './reports-card.scss';
+@import './user.scss';
