feat(report): implement edit report
- write unit and integration tests
- add component to edit report
- add necessary actions, reducers and selectors
- consume api endpoint to get red-flag and intervention reports
- consume api endpoint to update comment
-consume api endpoint to update location

[Delivers #1640356623]

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import './shared.scss';
 @import './home.scss';
 @import './dialog.scss';
@@ -6,3 +7,4 @@
 @import './admin.scss';
 @import './user.scss';
 @import './reports-card.scss';
+@import './toast.scss';
