feat(dashboard): add user dashboard
- write unit and integration tests
- create user dashboard components
- create loader component to act as status indicator during api requests
- create report card component to display summary of reports
-create summary box components to display stats of report
- add necessary actions, reducers and selectors

[Delivers #164035551]

--- a/src/styles/reports-card.scss
+++ b/src/styles/reports-card.scss
@@ -122,6 +122,15 @@
 {
     margin-top: 15px;
     font-size: 15px;
+    margin-right: 10px;
+}
+.report-item-link + a
+{
+ float: right;
+ padding: 7px 12px;
+ font-size: 15px;
+ margin-top: 3px;
+
 }
 
 .reports-column
