feat(admin): add admin dashboard
- write unit and integration tests
- create table row component
- create admin dashboard component
- consume api endpoints to get red-flag and intervention reports from all users
- add admin dahboard component to main route

[Delivers #164035778]

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -186,10 +186,6 @@
     margin-bottom: 40px;
 }
 
-.badge
-{
-}
-
 .status
 {
     color: rgba(255, 255, 255, 0.87);
@@ -325,3 +321,6 @@
     text-align: right;
 }
 
+.badge-status {
+    color: white
+}
